# ADAN

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.txt
compiled/: output.ll  output_exec
examples/: hello_adan.adan  hello_adan.adn
scripts/: mount_docker.sh
src/: main.rs
src/cli/: mod.rs
src/code_gen/: builder.rs  expressions.rs  mod.rs  statements.rs  types.rs
src/error/: mod.rs
src/lexer/: lexer.rs  token.rs
src/native/: http.rs  io.rs  mod.rs
src/parser/: ast.rs  parser.rs
src/std/: http.rs  io.rs  math.rs
util/: detect_os.py  docker.py
