[package]
name = "adan"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.51"
clearscreen = "4.0.2"
dirs = "6.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch="master", default-features = false, features = ["llvm15-0"] }
num-traits = "0.2.19"
rand = "0.9.2"
reqwest = "0.12.24"
rustyline = "17.0.2"
